@@ -1,3 +1,8 @@
+2010-02-04 Ozan Çağlayan <ozan@pardus.org.tr>
+		* pisi/pxml/autoxml.py (format): Some optional elements may be None
+		during formatting, handle those situations. We still have a formatting
+		issue caused by the automagical output representation of autoxml.
+
 2010-02-02 Ozan Çağlayan <ozan@pardus.org.tr>
 		* pisi/component.py(Maintainer): Add Maintainer tag to components.xml.
 
